[package]
name = "hacl-rust"
version = "0.0.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "GPLv3"
documentation = "https://docs.rs/hacl-rust/"
description = "Crypto library using formally verified code from the HACL project"
readme = "README.md"
repository = "https://github.com/cryspen/hacl-packages/rust"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["random"]
random = ["rand", "rand_core"]
serialization = ["serde", "serde_json"]

[dependencies]
hacl-rust-sys = { version = "0.0.0", path = "hacl-rust-sys" }
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
criterion = "^0.3"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "aead"
harness = false
