[package]
name = "hacl"
version = "0.0.2-dev.2"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/hacl/"
description = "Crypto library using formally verified code from the HACL project"
readme = "README.md"
repository = "https://github.com/cryspen/hacl-packages"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["random"]
random = ["rand", "rand_core"]
serialization = ["serde", "serde_json"]
hazmat = [] # This feature exposes raw, but safe HACL APIs for use in other libraries. Use with care.

[dependencies]
hacl-sys = { version = "=0.0.2-dev.4", path = "hacl-sys" }
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
hacl = { path = ".", features = ["hazmat", "random"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "aead"
harness = false
