opam-version: "2.0"
name: "hacl-star"
version: "0.6.0"
synopsis: "OCaml API for EverCrypt/HACL*"
description: """
Documentation for this library can be found
[here](https://tech.cryspen.com/hacl-packages/ocaml/main/index.html).
"""
maintainer: "Victor Dumitrescu <victor.dumitrescu@nomadic-labs.com>"
authors: [ "Project Everest" ]
license: "Apache-2.0"
homepage: "https://hacl-star.github.io/"
doc: "https://tech.cryspen.com/hacl-packages/ocaml/main/index.html"
bug-reports: "https://github.com/project-everest/hacl-star/issues"
depends: [
  "ocaml" { >= "4.08.0" }
  "dune" {>= "1.2"}
  "hacl-star-raw" {= version}
  "zarith"
  "cppo" {build}
  "odoc" {with-doc}
]
available: [
  os = "freebsd" | os-family != "bsd"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/project-everest/hacl-star.git"
