opam-version: "2.0"
name: "hacl-star"
version: "0.7.0"
synopsis: "OCaml API for EverCrypt/HACL*"
description: """
Documentation for this library can be found
[here](https://tech.cryspen.com/hacl-packages/ocaml/main/index.html).
"""
maintainer: "Victor Dumitrescu <victor.dumitrescu@nomadic-labs.com>"
authors: [ "Project Everest" ]
license: "Apache-2.0"
homepage: "https://tech.cryspen.com/hacl-packages/"
doc: "https://tech.cryspen.com/hacl-packages/ocaml/main/index.html"
bug-reports: "https://github.com/cryspen/hacl-packages/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.2"}
  "hacl-star-raw" {= version}
  "zarith"
  "cppo" {build}
  "alcotest" {with-test & >= "1.1.0"}
  "qcheck-core" {with-test & >= "0.20"}
  "secp256k1-internal" {with-test}
  "cstruct" {with-test}
  "odoc" {with-doc}
]
available: [
  os = "freebsd" | os-family != "bsd"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/cryspen/hacl-packages.git"
