[package]
name = "hacl-star-sys"
version = "0.2.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
build = "build.rs"
categories = ["cryptography", "api-bindings"]
links = "hacl"
license = "GPLv3"
documentation = "https://docs.rs/hacl-star-sys/"
description = "FFI bindings for the HACL C package"
readme = "README.md"
repository = "https://github.com/cryspen/hacl-packages/rust"

[dependencies]

[build-dependencies]
libc = { version = "0.2", default-features = false }
fs_extra = "1.2"

[target.'cfg(not(windows))'.build-dependencies]
bindgen = "0.63"
