[package]
name = "hacl-sys"
version = "0.0.1-dev.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
build = "build.rs"
categories = ["cryptography", "api-bindings"]
links = "hacl"
license = "Apache-2.0"
documentation = "https://docs.rs/hacl-sys/"
description = "FFI bindings for the HACL C package"
readme = "README.md"
repository = "https://github.com/cryspen/hacl-packages/rust"
exclude = [
    ".c/tests",
    ".c/wasm",
    ".c/ocaml",
    ".c/js",
    ".c/opam",
    ".c/build",
    ".c/opam.sh",
    ".c/mach",
    ".c/tools",
    ".c/docs",
    ".c/cpu-features",
    ".c/src/wasm",
    ".c/_build.sh",
    ".c/Doxyfile",
    ".c/.github",
    ".c/.drone.yml",
    ".c/.ci",
    ".c/.devcontainer",
    ".c/.git",
    ".c/.gitignore",
]

[dependencies]

[build-dependencies]
libc = { version = "0.2", default-features = false }
fs_extra = "1.2"

[target.'cfg(not(windows))'.build-dependencies]
bindgen = "0.64"
